src/assets/ingress/tls-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: teste
  name: teste
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: teste
status:
  loadBalancer: {}
