src/assets/ingress/ingress-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test
  template:
    metadata:
      labels:
        app: ingress-test
    spec:
      containers:
        - image: nginx
          name: nginx
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-test-2
  template:
    metadata:
      labels:
        app: ingress-test-2
    spec:
      containers:
        - image: httpd
          name: httpd
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-test
  name: ingress-test
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-test
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-test-2
  name: ingress-test-2
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ingress-test-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ingress-test
            port:
              number: 80
        path: /app
        pathType: Exact
      - backend:
          service:
            name: ingress-test-2
            port:
              number: 80
        path: /other
        pathType: Exact
  - host: aaa.anothertest.xyz
    http:
      paths:
      - backend:
          service:
            name: ingress-test-2
            port:
              number: 80
        path: /
        pathType: Exact
