src/assets/ingress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple
spec:
  rules:
    - host: teste.local
      http:
        paths:
          - backend:
              service:
                name: teste
                port:
                  number: 80
            path: /
            pathType: Exact
  tls:
    - hosts:
        - teste.local
      secretName: unsafe
